# tensorflow-cc-inference

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  package.xml
docs/: index.md
example/: keras_mnist.py  multiply_with_two.cc  multiply_with_two.py  multiply_with_two_uint8.py
include/tensorflow-cc-inference/: conversion.h  tensorflow-cc-inference.h
include/tensorflow_cc_inference/: Inference.h
include/tensorflow_inference/: Inference.h  tensorflow_inference.h
lib/: Inference.cc  tensorflow_inference.cc
src/: build_and_install_tensorflow  tensorflow-cc-inference.cc
test/: test_tensorflow_cc_inference.cc
test/graphs/: x_times_2.pb  x_times_two_uint8.pb
travis/: install.sh  install_tensorflow.sh  test.sh
